Updating graphics and vision reports

--- a/aber/graphics/report.tex
+++ b/aber/graphics/report.tex
@@ -420,7 +420,7 @@ Email: slj11@aber.ac.uk}
 \IEEEpeerreviewmaketitle
 
 \begin{abstract}
-We present an overview of an implementation of a virtual orrery application written in WebGL, HTML5 and Javascript. The simulation presented implements a full Phong shading lighting model with light attenuation. Advanced special effect features include transparent rings of Saturn, multi-texturing for a richer rendering of the Earth's complex surface, and elliptical orbits based on Kelpler's first two laws. Finally we present a summary of the existing work undertaken and offer some points for future development.
+We present an overview of an implementation of a virtual orrery application written in WebGL, HTML5 and Javascript. The simulation presented implements a full Phong shading lighting model with light attenuation. Advanced features include transparent rings of Saturn, multi-texturing for a richer rendering of the Earth's complex surface, and elliptical orbits based on Kelpler's first two laws. Finally we present a discussion of the work undertaken and offer some points for future development and improvement.
 \end{abstract}
 
 \section{Introduction}
@@ -430,7 +430,7 @@ All of the files required for this project are supplied in the requested zip fol
 
 The first section of this report outlines the basic functionality and overall structure of the application produced while the second section outlines the more advanced features implemented in the application. The final section concludes the report with a brief description of the problems I encountered throughout the assignment and what I would of done differently with hindsight.
 
-\section{Methods and Basic Implementation}
+\section{Basic Implementation}
 In this assignment I have heavily relied upon Javascript objects and prototypes to implement most of the functionality for the project. As Javascript has no support for classes, I have simulated classes by using objects with methods and attributes added to the prototypes which can be accessed using the \textit{this} keyword. Copies of an object can be created using the Javascript \textit{new} keyword. To simulate inheritance, I have used a small utility function called \textit{extends} which copies the prototype of a parent to a child.
 
 Entry to the program begins in a file called \textit{main.js} which contains many high level functions such as those used to initialise the WebGL environment on the canvas object in the HTML webpage, the main rendering loop for the program (with the timing of the loop handled using Google's WebGL Utils \cite{webgl-utils}) and the code for the initial creation and set-up of the models in the scene.
@@ -536,7 +536,7 @@ Control & Description \\
 \subsection{Camera Control}
 The camera uses the glMatrix \cite{glmatrix} library \textit{lookAt} function to generate a matrix that is always looking at the center of a planet. The arrow keys (see table \ref{table:keyboard-controls}) can be used to rotate around the planet along two axes. When looking at a planet other than the sun the camera will move with the planet's orbit so that the viewer may gain a decent view of the planet as it moves. When swapping between planets the zoom distance is automatically reset to a distance that is proportional to the radius of the currently selected planet. This is to ensure that the camera does not end up starting inside a larger planet or very far way from a smaller one.
 
-\section{Results}
+\section{Advanced Features}
 \label{sec:advanced-features}
 Alongside the basic functionality requested by the assignment brief, I have also implemented an number of additional features to extend the simulation further. This section documents these additional features and discusses how they're implemented within the project.
 
@@ -610,9 +610,9 @@ One final minor feature that I have added to the simulation is a cube mapped bac
 
 \section{Discussion}
 \label{sec:discussion}
-I feel that I have achieved the majority of the work outlined in the brief successfully. All of the basic features requested in the assignment outline are implemented along with a large number of additional features suggested in order to achieve top marks. In addition I have also implemented a couple of extensions which are not suggested or required by the brief therefore going beyond what is asked.
+I feel that I have achieved the majority of the work outlined in the brief successfully. All of the basic features requested in the assignment outline are implemented along with a large number of additional features suggested in order to achieve top marks. In addition I have also implemented a couple of extensions which are not suggested or required by the brief therefore going beyond what was asked.
 
-One area of the project which I felt worked quite well was the use of a tree like structure for the organisation of planets. This meant that the correct model-view matrix could be applied to each planet and have the parent planet's transforms applied to it at the same time, but also prevented the incorrect transformation from being applied to a planet as a copy could be made and passed to the children, so the original would remain unaffected. This was a useful aspect to get right early in the project as it meant that positioning objects in the scene became drastically simplified.
+One area of the project which I felt worked quite well was the use of a tree like structure for the organisation of planets. This meant that the correct model-view matrix could be applied to each planet and have the parent planet's transforms applied to it at the same time. This also prevented the incorrect transformation from being applied to a planet as a copy could be made and passed to the children, so the original would remain unaffected. This was a useful aspect to get right early in the project as it meant that positioning objects in the scene became drastically simplified.
 
 While I have only partially implemented the feature in this project, using a separate buffer in the scene graph feels like the most natural way to handle transparency and blending. A major area for improvement in this project would be to add support for sorting the blending buffer in the SceneGraph object in order of the closest item relative to the camera's position. The traditional way to implement this would be with the use of a binary space partition tree. By implementing a BSP tree and then sorting items in the blending buffer relative their position in this tree support for correctly drawing more than one blended object in the scene could be achieved through a simple look-up. This could also be used to implement other advanced features such as shadows.
 
@@ -624,11 +624,11 @@ One final issue that I encountered with this assignment which is fairly unrelate
 
 \section{Conclusions}
 \label{sec:conclusions}
-In conclusion, I have implemented a virtual orrery in WebGL meeting all of the requested features outlined in the brief such as a Phong lighting model, basic planetary motion, and rendering textured spheres as well as implementing some additional functionality such as multi-texturing, light attenuation, elliptical orbits and transparency for Saturn's rings. I have demonstrated my ability to implement all of these features in pure WebGL without the use of external libraries such as Three.js, with the exception of the glMatrix library \cite{glmatrix} for matrix transformations on the Javascript side and the use of Google's WebGL Utils \cite{webgl-utils} for timing the rendering loop.
+In conclusion, I have implemented a virtual orrery in WebGL meeting all of the requested features outlined in the brief including a Phong lighting model, basic planetary motion, and rendering textured spheres as well as implementing some additional functionality such as multi-texturing, light attenuation, elliptical orbits and transparency for Saturn's rings. I have demonstrated my ability to implement all of these features in pure WebGL without the use of external libraries such as Three.js, with the exception of the glMatrix library \cite{glmatrix} for matrix transformations on the Javascript side and the use of Google's WebGL Utils \cite{webgl-utils} for timing the rendering loop.
 
-There were two major challenges involved with this project. The first was my personal unfamiliarity with the WebGL and the second my unfamiliarity with 3D graphics in general. This lead to some bad design choices that resulted in a large amount of refactoring later on in the project and a longer development time that usual. Despite these issues, this paper clearly illustrates that a large amount of advanced features have been successfully implemented.
+There were two major challenges involved with this project. The first was my personal unfamiliarity with WebGL and the second was my unfamiliarity with 3D graphics in general. This lead to some bad design choices that resulted in a large amount of refactoring later on in the project and a longer development time that usual. Despite these issues, this paper clearly illustrates that a large amount of advanced features have been successfully implemented.
 
-Further enhancements to the simulation would include implementing a binary space partition tree to correctly render multiple blending objects without z-ordering issues. This would also pave the way for adding support for more advanced features such as making the planets in the simulation cast shadows as they eclipse the sun. Another major enhancement which I failed to achieve in the allotted amount of time was the implementation of bump mapping. This would was the only advanced feature suggested in the brief that was left out of the final implementation. I would be keen to get a full implementation of bump mapping implemented in a future version of the simulation as the effect would ad greater realism without too much additional work. The only key issue is the correct calculation of tangent vectors for the surface normals of the planets.
+Further enhancements to the simulation would include implementing a binary space partition tree to correctly render multiple blending objects without z-ordering issues. This would also pave the way for adding support for more advanced features such as making the planets in the simulation cast shadows as they eclipse the sun. Another major enhancement which I failed to achieve in the allotted amount of time was the implementation of bump mapping. This was the only advanced feature suggested in the brief that was left out of the final implementation. I would be keen to get a full implementation of bump mapping into a future version of the simulation as the effect would add greater realism without too much additional work. The only key issue is the correct calculation of tangent vectors for the surface normals of the planets.
 
 \bibliographystyle{IEEEtran}
 \bibliography{refs}
