--- a/aber/vision/references.bib
+++ b/aber/vision/references.bib
@@ -1,3 +1,12 @@
+@inproceedings{subburaman2012counting,
+  title={Counting people in the crowd using a generic head detector},
+  author={Subburaman, Venkatesh Bala and Descamps, Adrien and Carincotte, Cyril},
+  booktitle={Advanced Video and Signal-Based Surveillance (AVSS), 2012 IEEE Ninth International Conference on},
+  pages={470--475},
+  year={2012},
+  organization={IEEE}
+}
+
 @inproceedings{viola2001rapid,
   title={Rapid object detection using a boosted cascade of simple features},
   author={Viola, Paul and Jones, Michael},
@@ -61,7 +70,7 @@
 }
 
 @article{sung1998example,
-%  title={Example-based learning for view-based human face detection},
+  title={Example-based learning for view-based human face detection},
   author={Sung, Kah-Kay and Poggio, Tomaso},
   journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
   volume={20},
@@ -138,4 +147,66 @@
   pages={158--163},
   year={2008},
   organization={IEEE}
+}
+
+@incollection{mikolajczyk2004human,
+  title={Human detection based on a probabilistic assembly of robust part detectors},
+  author={Mikolajczyk, Krystian and Schmid, Cordelia and Zisserman, Andrew},
+  booktitle={Computer Vision-ECCV 2004},
+  pages={69--82},
+  year={2004},
+  publisher={Springer}
+}
+
+@inproceedings{zhang2006robust,
+  title={Robust multi-view multi-camera face detection inside smart rooms using spatio-temporal dynamic programming},
+  author={Zhang, Zhenqiu and Potamianos, Gerasimos and Liu, Ming and Huang, Thomas},
+  booktitle={Automatic Face and Gesture Recognition, 2006. FGR 2006. 7th International Conference on},
+  pages={407--412},
+  year={2006},
+  organization={IEEE}
+}
+
+@article{li2004floatboost,
+  title={Floatboost learning and statistical face detection},
+  author={Li, Stan Z and Zhang, ZhenQiu},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={26},
+  number={9},
+  pages={1112--1123},
+  year={2004},
+  publisher={IEEE}
+}
+
+@book{bradski2008learning,
+  title={Learning OpenCV: Computer vision with the OpenCV library},
+  author={Bradski, Gary and Kaehler, Adrian},
+  year={2008},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+@inproceedings{freund1996experiments,
+  title={Experiments with a new boosting algorithm},
+  author={Freund, Yoav and Schapire, Robert E and others},
+  booktitle={ICML},
+  volume={96},
+  pages={148--156},
+  year={1996}
+}
+
+@article{hjelmaas2001face,
+  title={Face Detection: A Survey},
+  author={Hjelm{\aa}s, Erik and Low, Boon Kee},
+  journal={Computer Vision and Image Understanding},
+  volume={83},
+  pages={236--274},
+  year={2001}
+}
+
+@online{opencv2014cascade,
+title={Cascade Classification - OpenCV API Reference},
+author={{OpenCV}},
+year=2014,
+url={http://docs.opencv.org/modules/objdetect/doc/cascade_classification.html},
+urldate={2014-11-23}
 }
