Vision: Finish Viola-Jones assignment.

--- a/aber/vision/references.bib
+++ b/aber/vision/references.bib
@@ -204,9 +204,20 @@
 }
 
 @online{opencv2014cascade,
-title={Cascade Classification - OpenCV API Reference},
-author={{OpenCV}},
+author={OpenCV},
+title={Cascade Classification  OpenCV API Reference},
 year=2014,
-url={http://docs.opencv.org/modules/objdetect/doc/cascade_classification.html},
+url={http://docs.opencv.org/modules/objdetect/doc/cascade\_classification.html},
 urldate={2014-11-23}
+}
+
+@article{wolpert1997no,
+  title={No free lunch theorems for optimization},
+  author={Wolpert, David H and Macready, William G},
+  journal={Evolutionary Computation, IEEE Transactions on},
+  volume={1},
+  number={1},
+  pages={67--82},
+  year={1997},
+  publisher={IEEE}
 }
