Add first draft of internet apps report

--- a/aber/internet_apps/references.bib
+++ b/aber/internet_apps/references.bib
@@ -7,9 +7,49 @@
 }
 
 @online{libraryClick,
-  author = {Armin Ronacher},
+  author = {A. Ronacher},
   title = {{Click}},
   year = 2014,
   url = {http://click.pocoo.org/3/},
   urldate = {2014-12-03}
-}\textsl{•}
+}
+
+@online{libraryDoorkeeper,
+  author = {F. E. Phillipp and T. Costa},
+  title = {{Doorkeeper}},
+  year = 2014,
+  url = {https://github.com/doorkeeper-gem},
+  urldate = {2014-12-04}
+}
+
+@online{rfc6749,
+  author = {{Internet Engineering Task Force}},
+  title = {{OAuth 2.0}},
+  year = 2014,
+  url = {https://tools.ietf.org/html/rfc6749#section-4.3},
+  urldate = {2014-12-04}
+}
+
+@online{rfc6749resourceOwner,
+  author = {{Internet Engineering Task Force}},
+  title = {{OAuth 2.0 Resource Owner Password Credentials Grant}},
+  year = 2014,
+  url = {https://tools.ietf.org/html/rfc6749#section-4.3},
+  urldate = {2014-12-04}
+}
+
+@online{rfc2324htcpcp,
+  author = {{Network Working Group}},
+  title = {{Hyper Text Coffee Pot Control Protocol}},
+  year = 2014,
+  url = {http://tools.ietf.org/html/rfc2324},
+  urldate = {2014-12-05}
+}
+
+@online{libraryPickledb,
+  author = {{Harrison Erd}},
+  title = {{PickleDB}},
+  year = 2014,
+  url = {https://pythonhosted.org/pickleDB/},
+  urldate = {2014-12-06}
+}
